# my_vector_db

./: .gitignore  README.md  cluster.yaml  deploy.sh  docker-compose.yml  get_embeddings_only.py  manifest.yaml  port_forward_db.sh
backend/: .gitignore  Cargo.toml  DOCKERFILE  blog_post.md  llama_index.py  out.txt  playground.py
backend/deprecated/: database_core.rs
backend/src/: DB_interface.rs  LlamaEmbedding.rs  b_tree_vanilla.rs  database_core.rs  db_interface.rs  env_setup.sh  helpers.rs  lib.rs  llama_embedding.rs  main.rs  ml_interface.rs  node_interface.rs  server.rs  types.rs  vector_b_tree.rs  vector_db.rs
config/: manifest.yaml  secret-template.yaml
embedding_server/: .gitignore  run.sh
llama_server/: Dockerfile  run.sh
llamaindex_wrapper/: llamafile_embedding_interface.py  llamafile_embedding_lib.pyx  setup.py
migrations/: Migration_001_create_keyspace.cql  Migration_002_create_tables.cql
old_backend/: Cargo.toml  build.rs  llama_index.py
old_backend/src/: db_interface.rs  llama_embedding.rs  types.rs
scraper/: .gitignore  Dockerfile.lead_finder  Dockerfile.scraper  bayes_classifier.py  data_wrangler.py  delete_null_script.py  dockercompose.yml  main.py  requirements.txt  yelp_api.json
scraper/lead_finder/: bloomfilter.py  main.py  redis_intrerface.py
scraper/ny_health_db/: main.py  re_index_db_items.py
scraper/scrape_website/: google_scraper.py  main.py  webscraper.py  website_attack.py  website_scraper.py  website_scraper_deprecated.py  yellowpages_attack.py  (+1 more)
test_rust_backend/: .Dockerfile.swp  Cargo.toml  Dockerfile
(+13 files in other folders)
