[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build="build.rs"

[dependencies]
rand = "0.9.0-alpha.2"
log = "0.4.22"
#tch = "0.17.0"
#anyhow = "1.0"
#tiktoken-rs = "0.5.0"
#tokio = { version = "1.0", features = ["full"] }
#axum = "0.6"
#serde = { version = "1.0", features = ["derive"] }
#rand = "0.8.5"