[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build="build.rs"

[dependencies]
rand = "0.9.0-alpha.2"
log = "0.4.22"
pyo3 = { version = "0.18", features = ["extension-module"] }
numpy = "0.18"
libc = "0.2.159"
tch = "0.17.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.128"
